# webycash-sdk

./: .gitignore  CHANGELOG.md  README.md  webycash-sdk.podspec
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  test_smoke.cpp
cpp/include/: webcash_sdk.hpp  webycash_sdk.hpp
csharp/: WebcashSDK.cs  WebcashSDK.csproj  WebycashSDK.cs  WebycashSDK.csproj
csharp/WebycashSDK.Tests/: SmokeTests.cs  WebycashSDK.Tests.csproj
docs/: API.md  cpp.md  csharp.md  go.md  java.md  kotlin.md  python.md  swift.md  typescript.md  wasm.md
examples/: README.md
examples/cpp/: example.cpp
examples/csharp/: Example.cs  Example.csproj
examples/go/: main.go
examples/java/: Example.java
examples/kotlin/: Example.kt
examples/node/: example.cjs  example.js  example.mjs
examples/python/: example.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/swift/: Example.swift
go/: go.mod  webcash.go  webcash_test.go
include/: webycash.h
java/: pom.xml
java/src/main/java/cash/weby/sdk/: WebcashSDK.java  WebycashSDK.java
java/src/test/java/cash/weby/sdk/: WebycashSDKSmokeTest.java
kotlin/: build.gradle.kts
kotlin/src/main/kotlin/cash/weby/sdk/: WebcashSDK.kt  WebycashSDK.kt
kotlin/src/test/kotlin/cash/weby/sdk/: WebycashSDKTest.kt
native/: Cargo.toml  cbindgen.toml
native/src/: lib.rs
node/: package-lock.json  package.json  tsconfig.json
node/src/: backend-ffi.ts  backend-wasm.ts  backend.ts  error.ts  index.ts  init.ts  types.ts  wallet.ts
node/test/: sdk.test.cjs  sdk.test.mjs
node/wasm/: webycash_sdk_wasm.d.ts  webycash_sdk_wasm_bg.wasm.d.ts
python/: README.md  pyproject.toml
python/tests/: test_sdk.py
python/webcash_sdk/: __init__.py  sdk.py
python/webycash_sdk/: __init__.py  sdk.py
scripts/: build-wasm.sh  dev-cpp.sh  dev-csharp.sh  dev-go.sh  dev-kotlin.sh  dev-node.sh  dev-python.sh  dev-setup.sh  dev-swift.sh
swift/: Package.swift
swift/Sources/CWebcashSDK/: module.modulemap
swift/Sources/CWebcashSDK/include/: webycash.h
swift/Sources/CWebycashSDK/: module.modulemap
swift/Sources/CWebycashSDK/include/: webycash.h
swift/Sources/WebcashSDK/: WebcashSDK.swift
swift/Sources/WebycashSDK/: WebcashSDK.swift  WebycashSDK.swift
swift/Tests/WebycashSDKTests/: WebycashSDKTests.swift
wasm/: Cargo.toml
wasm/src/: lib.rs
