[package]
name = "webycash-sdk"
version = "0.2.11"
edition = "2021"
rust-version = "1.85"
description = "Webcash cross-platform SDK — FFI bridge for Rust, Swift, Kotlin, Java, C#, Python, TypeScript, Go, C/C++"
license = "MIT"
authors = ["Webycash Developers"]
homepage = "https://weby.cash"
repository = "https://github.com/webycash/webycash-sdk"
keywords = ["webcash", "sdk", "ffi", "wallet"]
categories = ["api-bindings", "cryptography"]

[lib]
name = "webycash_sdk"
crate-type = ["cdylib", "staticlib"]

[dependencies]
webylib = { version = "0.2.6", features = ["ffi"] }
