[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webcash-sdk"
version = "0.1.0"
description = "Webcash cross-platform SDK — Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Webycash Developers"}]
keywords = ["webcash", "wallet", "payments", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/webcash_sdk/webcash_sdk-sdk"
Repository = "https://github.com/webcash_sdk/webcash_sdk-sdk"

[tool.setuptools.packages.find]
include = ["webcash_sdk*"]

[tool.setuptools.package-data]
webcash_sdk = ["*.so", "*.dylib", "*.dll"]
