[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webycash-sdk"
version = "0.2.15"
description = "Webcash cross-platform SDK — Python bindings"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Webycash Developers"}]
keywords = ["webcash", "wallet", "payments", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://github.com/webycash/webycash-sdk"
Repository = "https://github.com/webycash/webycash-sdk"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["webycash_sdk*"]

[tool.setuptools.package-data]
webycash_sdk = ["*.so", "*.dylib", "*.dll"]
