[package]
name = "webycash-sdk-wasm"
version = "0.1.1"
edition = "2021"
rust-version = "1.85"
description = "Webcash SDK — WebAssembly bindings"
license = "MIT"
authors = ["Webycash Developers"]
homepage = "https://weby.cash"
repository = "https://github.com/webycash/webycash-sdk"
keywords = ["webcash", "sdk", "wasm", "wallet"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
webylib = { version = "0.3.12", default-features = false, features = ["wasm"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
hex = "0.4"
aes-gcm = "0.10"
argon2 = "0.5"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
